--- a/lecture_exercises_students/Lorentz_system_students.ipynb
+++ b/lecture_exercises_students/Lorentz_system_students.ipynb
@@ -5,12 +5,12 @@
    "id": "1666f473",
    "metadata": {},
    "source": [
-    "Lorentz system"
+    "Lorentz system: definition of the ODEs system, parameters and solving"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "64efa74e",
    "metadata": {},
    "outputs": [],
@@ -29,23 +29,24 @@
     "    return [dx, dy, dz]\n",
     "\n",
     "# 2) Set parameters and initial conditions\n",
-    "sigma = 10.0\n",
-    "rho   = 20\n",
+    "Pr = 10.0\n",
+    "Ra  = 1\n",
     "beta  = 8.0 / 3.0\n",
     "\n",
-    "y0   = np.array([1.0, 1.0, 1.0])\n",
+    "y0   = np.array([1.0, 1.0, 1.0]) # initial condition 1\n",
     "eps  = 1e-6\n",
-    "y0_2 = y0 + np.array([eps, 0.0, 0.0])\n",
+    "y0_2 = np.array([1.0 + eps, 1.0, 1.0]) # initial condition 2 (slightly perturbed)\n",
     "\n",
-    "t_span = (0.0, 50.0)\n",
+    "t_end = 50.0\n",
+    "t_span = (0.0, t_end)\n",
     "t_eval = np.linspace(t_span[0], t_span[1], 10000)\n",
     "\n",
     "# Choose a method: \"RK45\", \"LSODA\", \"BDF\"\n",
     "method = \"RK45\"          \n",
     "\n",
     "# 3) Solve the system for both initial conditions\n",
-    "sol1 = solve_ivp(lorenz_system, t_span, y0,   args=(sigma, rho, beta), t_eval=t_eval, method=method, rtol=1e-9, atol=1e-12)\n",
-    "sol2 = solve_ivp(lorenz_system, t_span, y0_2, args=(sigma, rho, beta), t_eval=t_eval, method=method, rtol=1e-9, atol=1e-12)\n",
+    "sol1 = solve_ivp(lorenz_system, t_span, y0,   args=(Pr, Ra, beta), t_eval=t_eval, method=method, rtol=1e-9, atol=1e-12)\n",
+    "sol2 = solve_ivp(lorenz_system, t_span, y0_2, args=(Pr, Ra, beta), t_eval=t_eval, method=method, rtol=1e-9, atol=1e-12)\n",
     "\n",
     "t = sol1.t\n",
     "X1, Y1, Z1 = sol1.y\n",
@@ -57,12 +58,21 @@
    "id": "57d2bf5f",
    "metadata": {},
    "source": [
-    "Time solutions plots"
+    "Exercise: \n",
+    "- Step 1:\n",
+    "    - Create a 3x1 subplot figure.\n",
+    "    - Plot $x(t)$ in the first, $y(t)$ in the second, and $z(t)$ in the third figure, for both initial conditions.\n",
+    "- Step 2:\n",
+    "    - Create a 1x3 subplot figure.\n",
+    "    - Plot the phase portraits: $x(t)$ vs $z(t)$ in the first, $x(t)$ vs $y(t)$ in the second, and $y(t)$ vs $z(t)$ in the third for both initial conditions. (Note: x-axis vs y-axis)\n",
+    "\n",
+    "- Step 3:\n",
+    "    - Increase slowly Rayleigh number `Ra` (up to 25) by modifying and run again all the cells and observe how the system's behavior changes!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "12ff6284",
    "metadata": {},
    "outputs": [
@@ -79,53 +89,34 @@
    ],
    "source": [
     "# ----- Plot time series: 3x1 -----\n",
-    "fig, axes = plt.subplots(3, 1, figsize=(12, 10), sharex=True)\n",
-    "\n",
-    "colors = {\"x\":\"tab:blue\", \"y\":\"tab:orange\", \"z\":\"tab:green\"}\n",
+    "____ # TODO: create a 3x1 subplot figure with shared x-axis using different colors\n",
     "\n",
     "# x(t)\n",
-    "axes[0].plot(t, X1, color=colors[\"x\"], lw=2)\n",
-    "axes[0].plot(t, X2, color=colors[\"x\"], lw=2, ls=\"--\")\n",
-    "axes[0].set_ylabel(\"x(t)\", fontsize=14)\n",
-    "axes[0].grid(alpha=0.3)\n",
+    "____ # TODO: plot x(t) for both initial conditions\n",
     "\n",
     "# y(t)\n",
-    "axes[1].plot(t, Y1, color=colors[\"y\"], lw=2)\n",
-    "axes[1].plot(t, Y2, color=colors[\"y\"], lw=2, ls=\"--\")\n",
-    "axes[1].set_ylabel(\"y(t)\", fontsize=14)\n",
-    "axes[1].grid(alpha=0.3)\n",
+    "____ # TODO: plot y(t) for both initial conditions\n",
     "\n",
     "# z(t)\n",
-    "axes[2].plot(t, Z1, color=colors[\"z\"], lw=2)\n",
-    "axes[2].plot(t, Z2, color=colors[\"z\"], lw=2, ls=\"--\")\n",
-    "axes[2].set_ylabel(\"z(t)\", fontsize=14)\n",
-    "axes[2].set_xlabel(\"time\", fontsize=14)\n",
-    "axes[2].grid(alpha=0.3)\n",
+    "____ # TODO: plot z(t) for both initial conditions\n",
     "\n",
-    "fig.suptitle(\"Lorenz time series: sensitivity to initial conditions\", fontsize=16)\n",
+    "\n",
+    "fig_1_3.suptitle(\"Lorenz time series: sensitivity to initial conditions\", fontsize=16)\n",
     "\n",
     "# A clean, global legend (solid = IC1, dashed = IC2)\n",
     "legend_lines = [\n",
     "    Line2D([0],[0], color=\"black\", lw=1.5, ls=\"-\"),\n",
     "    Line2D([0],[0], color=\"black\", lw=1.5, ls=\"--\"),\n",
     "]\n",
-    "fig.legend(legend_lines, [f\"IC: {y0}\", f\"IC: {y0_2}\"], loc=\"upper right\", frameon=False)\n",
+    "fig_1_3.legend(legend_lines, [f\"IC: {y0}\", f\"IC: {y0_2}\"], loc=\"upper right\", frameon=False)\n",
     "\n",
     "plt.tight_layout()\n",
     "plt.show()\n"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "b39bef49",
-   "metadata": {},
-   "source": [
-    "Phase space plots"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "ddb3505e",
    "metadata": {},
    "outputs": [
@@ -142,38 +133,24 @@
    ],
    "source": [
     "# --- Phase space: 1x3 subplots ---\n",
-    "fig_ps, ax = plt.subplots(1, 3, figsize=(12, 5), sharex=False, sharey=False)\n",
+    "____ # TODO: create a 1x3 subplot figure\n",
     "\n",
     "# x–z\n",
-    "ax[0].plot(X1, Z1, lw=2, label=\"IC1\")\n",
-    "ax[0].plot(X2, Z2, lw=2, ls=\"--\", alpha=0.9, label=\"IC2\")\n",
-    "ax[0].set_xlabel(\"x\", fontsize=14)\n",
-    "ax[0].set_ylabel(\"z\", fontsize=14)\n",
-    "ax[0].set_title(\"x-z\", fontsize=14)\n",
-    "ax[0].grid(alpha=0.3)\n",
+    "____ # TODO: plot x vs z for both initial conditions\n",
     "\n",
     "# x–y\n",
-    "ax[1].plot(X1, Y1, lw=2, label=\"IC1\")\n",
-    "ax[1].plot(X2, Y2, lw=2, ls=\"--\", alpha=0.9, label=\"IC2\")\n",
-    "ax[1].set_xlabel(\"x\", fontsize=14)\n",
-    "ax[1].set_ylabel(\"y\", fontsize=14)\n",
-    "ax[1].set_title(\"x-y\", fontsize=14)\n",
-    "ax[1].grid(alpha=0.3)\n",
+    "____ # TODO: plot x vs y for both initial conditions\n",
     "\n",
     "# y–z\n",
-    "ax[2].plot(Y1, Z1, lw=2, label=\"IC1\")\n",
-    "ax[2].plot(Y2, Z2, lw=2, ls=\"--\", alpha=0.9, label=\"IC2\")\n",
-    "ax[2].set_xlabel(\"y\", fontsize=14)\n",
-    "ax[2].set_ylabel(\"z\", fontsize=14)\n",
-    "ax[2].set_title(\"y-z\", fontsize=14)\n",
-    "ax[2].grid(alpha=0.3)\n",
+    "____ # TODO: plot y vs z for both initial conditions\n",
+    "\n",
     "\n",
     "# One global legend (solid = IC1, dashed = IC2)\n",
     "handles = [Line2D([0],[0], lw=2, ls=\"-\", label=\"IC1\"),\n",
     "           Line2D([0],[0], lw=2, ls=\"--\", label=\"IC2\")]\n",
-    "fig_ps.legend(handles=handles, loc=\"upper right\", frameon=False)\n",
+    "fig_3_1.legend(handles=handles, loc=\"upper right\", frameon=False)\n",
     "\n",
-    "fig_ps.suptitle(\"Lorenz phase portraits (1×3)\", fontsize=16)\n",
+    "fig_3_1.suptitle(\"Lorenz phase portraits (1x3)\", fontsize=16)\n",
     "plt.tight_layout()\n",
     "plt.show()"
    ]
