--- a/_solve_ivp_1.qmd
+++ b/_solve_ivp_1.qmd
@@ -32,9 +32,11 @@ Solving an ODE with `solve_ivp` typically involves the following steps:
 
 ::: {.fragment .fade-left}
 > ``` import scipy.integrate as spi ```
-:::
-:::{.fragment .fade-left}
+
 > ```from scipy.integrate import solve_ivp```
+
+
+You can follow me along in the [population_balance_students.ipynb]() notebook!
 :::
 
 ## 1. Define the IVP problem
@@ -55,6 +57,7 @@ where:
 - *K* is the carrying capacity of the environment.
 - $N(0)$ = $N_0$ is the initial population size.
 :::
+
 
 ## 2. Implement the ODE system {auto-animate=true} 
 We can implement the ODE system in Python as follows:
@@ -178,7 +181,7 @@ plt.show()
 
 
 ## Now you try!
-- Open the [rabbit population exercise notebook](b)
+- Open the [population_balance_students.ipynb]() and go to the section **"Your turn!"**.
 - Play around with different parameters for *r*, *K*, and *N₀*.
 - Modify the code such that you solve the ODE for a **different initial conditions** and plot the results on the same graph.
 - Try to remove `t_eval=t_eval` from the `solve_ivp` function and see what happens to the output plot. Do you notice any difference?
