--- a/lecture_exercises_students/ode_fitting_students.ipynb
+++ b/lecture_exercises_students/ode_fitting_students.ipynb
@@ -2,6 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "ff930d23",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "title: \"Practicum Process Technology - CSTR fitting exercise\"\n",
+    "author: \"Mattia Galanti\"\n",
+    "update: \"10/11/2025\"\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "fa45ca42",
    "metadata": {},
    "source": [
