--- a/lecture_exercises_students/population_balance_students.ipynb
+++ b/lecture_exercises_students/population_balance_students.ipynb
@@ -2,6 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "789b91fa",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "title: \"Practicum Process Technology - Population Balance Exercises for Students\"\n",
+    "author: \"Mattia Galanti\"\n",
+    "update: \"10/11/2025\"\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8c1df67d",
    "metadata": {},
    "source": [
