--- a/notebooks/Lorentz_system.ipynb
+++ b/notebooks/Lorentz_system.ipynb
@@ -2,6 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "7b9abbd6",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "title: \"Practicum Process Technology - Lorentz System\"\n",
+    "author: \"Mattia Galanti\"\n",
+    "update: \"10/11/2025\"\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "1666f473",
    "metadata": {},
    "source": [
