--- a/notebooks/model_fitting.ipynb
+++ b/notebooks/model_fitting.ipynb
@@ -2,6 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "90f31ba0",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "title: \"Practicum Process Technology - Model Fitting\"\n",
+    "author: \"Mattia Galanti\"\n",
+    "update: \"10/11/2025\"\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e5d36d9b",
    "metadata": {},
    "source": [
@@ -10,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 1,
    "id": "4d907f51",
    "metadata": {},
    "outputs": [
@@ -102,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 2,
    "id": "e213092a",
    "metadata": {},
    "outputs": [
