--- a/notebooks/ode_fitting.ipynb
+++ b/notebooks/ode_fitting.ipynb
@@ -2,6 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "880421cf",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "title: \"Practicum Process Technology - ODEs Fitting\"\n",
+    "author: \"Mattia Galanti\"\n",
+    "update: \"10/11/2025\"\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ab1a20e1",
    "metadata": {},
    "source": [
