--- a/notebooks/population_balance.ipynb
+++ b/notebooks/population_balance.ipynb
@@ -2,6 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "11c7de13",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "title: \"Practicum Process Technology - Population Balance\"\n",
+    "author: \"Mattia Galanti\"\n",
+    "update: \"10/11/2025\"\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8c1df67d",
    "metadata": {},
    "source": [
@@ -130,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "id": "92b03ad8",
    "metadata": {},
    "outputs": [
