--- a/lecture_exercises_students/model_fitting_students.ipynb
+++ b/lecture_exercises_students/model_fitting_students.ipynb
@@ -2,6 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "15870b50",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "title: \"Practicum Process Technology - Model Fitting Exercises for Students\"\n",
+    "author: \"Mattia Galanti\"\n",
+    "update: \"10/11/2025\"\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e5d36d9b",
    "metadata": {},
    "source": [
