--- a/notebooks/stiff_equations.ipynb
+++ b/notebooks/stiff_equations.ipynb
@@ -2,6 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "10ca8913",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "title: \"Practicum Process Technology - Stiff Equations\"\n",
+    "author: \"Mattia Galanti\"\n",
+    "update: \"10/11/2025\"\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "36c45e6d",
    "metadata": {},
    "source": [
